# django-restframework-sample

./: README.md  manage.py  pyproject.toml
app/: serializer.py  urls.py  views.py
restframework_sample/: asgi.py  settings.py  urls.py  wsgi.py
