[tool.poetry]
name = "django-restframework-sample"
version = "0.1.0"
description = ""
authors = ["515hikaru <12kojima.takahiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.2"
isort = "^4.3.21"
django-silk = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
